--- a/styles/home.css
+++ b/styles/home.css
@@ -32,7 +32,7 @@
         margin: 2rem 0;
     }
 
-    h1 {
+    /* h1 {
         font-family: 'Big Shoulders Display';
         font-style: normal;
         font-weight: 900;
@@ -49,9 +49,9 @@
         font-size: 18px;
         line-height: 28px;
         color: #444444;
-    }
+    } */
 
-    .location {
+    /* .location {
         display: flex;
     }
 
@@ -69,6 +69,11 @@
         border: 1px solid black;
     }
 
+    .btn a{
+        text-decoration: none;
+        color: #FFFFFF;
+    }
+
     .arrow{
         display: flex;
         justify-content: center;
@@ -81,7 +86,7 @@
     .arrow img {
         width: 8px;
         height: 24px;
-    }
+    } */
 
     .main-content {
         display: flex;
@@ -149,7 +154,7 @@
         color: #FFFFFF;
     }
 
-    footer {
+    /* footer {
         width: 100vw;
         display: flex;
         flex-direction: column;
@@ -176,5 +181,5 @@
     .socials{ 
         display: flex;
         column-gap: 1rem;
-    }
+    } */
 }
